--- a/new_projects/scrapy.cfg
+++ b/new_projects/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = freelancer.settings
+default = new_projects.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = freelancer
+project = new_projects
